--- a/Index.html
+++ b/Index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css" />
     <title>Document</title>
     
 </head>
 
 <body>
-<H1>Mi Página 14-05-24-15:48</H1>
+<H1>Mi Página 14-05-24-15:48 por JERO</H1>
 
 
 
